fixed splash screen to work on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,9 @@ a {
 }
 
 .splash {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
   top:0;
   left:0;
@@ -95,11 +98,22 @@ a {
   z-index: 200;
   color: white;
   text-align: center;
-  line-height: 90vh;
+  /* line-height: 90vh; */
   opacity: .7;
   display: flex;
   flex-direction: column;
   font-size: 50px;
+}
+
+/* @media (max-width: 900px) {
+  .splash{
+    font-size: 25px;
+  }
+} */
+@media (max-width: 600px) {
+  .splash{
+    font-size: 25px;
+  }
 }
 
 .slide-left {
